resources/application/deployment-config.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  resourceVersion: '537694727'
  name: fiap-mba-app
  uid: 22d4c0d4-beff-49db-9073-427199a7a6c4
  creationTimestamp: '2022-01-13T23:56:42Z'
  generation: 4
  managedFields:
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2022-01-13T23:56:43Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"fiap-mba-app"}':
                  'f:image': {}
          'f:triggers': {}
    - manager: Mozilla
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2022-01-13T23:59:42Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            'f:app.openshift.io/runtime': {}
            'f:app': {}
            'f:app.kubernetes.io/name': {}
            .: {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime-version': {}
            'f:app.openshift.io/runtime-namespace': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/component': {}
        'f:spec':
          'f:replicas': {}
          'f:selector':
            .: {}
            'f:app': {}
            'f:deploymentconfig': {}
          'f:strategy':
            'f:activeDeadlineSeconds': {}
            'f:rollingParams':
              .: {}
              'f:intervalSeconds': {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
              'f:timeoutSeconds': {}
              'f:updatePeriodSeconds': {}
            'f:type': {}
          'f:template':
            .: {}
            'f:metadata':
              .: {}
              'f:annotations':
                .: {}
                'f:openshift.io/generated-by': {}
              'f:creationTimestamp': {}
              'f:labels':
                .: {}
                'f:app': {}
                'f:deploymentconfig': {}
            'f:spec':
              .: {}
              'f:containers':
                .: {}
                'k:{"name":"fiap-mba-app"}':
                  .: {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":3000,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources':
                    .: {}
                    'f:limits':
                      .: {}
                      'f:cpu': {}
                      'f:memory': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2022-01-13T23:59:42Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:updatedReplicas': {}
          'f:readyReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:status': {}
              'f:type': {}
          'f:details':
            .: {}
            'f:causes': {}
            'f:message': {}
          'f:replicas': {}
          'f:availableReplicas': {}
          'f:observedGeneration': {}
          'f:unavailableReplicas': {}
          'f:latestVersion': {}
      subresource: status
  namespace: wmirandamba-dev
  labels:
    app: fiap-mba-app
    app.kubernetes.io/component: fiap-mba-app
    app.kubernetes.io/instance: fiap-mba-app
    app.kubernetes.io/name: fiap-mba-app
    app.kubernetes.io/part-of: fiap-mba-app
    app.openshift.io/runtime: fiap-mba-app
    app.openshift.io/runtime-namespace: wmirandamba-dev
    app.openshift.io/runtime-version: latest
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - fiap-mba-app
        from:
          kind: ImageStreamTag
          namespace: wmirandamba-dev
          name: 'fiap-mba-app:latest'
        lastTriggeredImage: >-
          image-registry.openshift-image-registry.svc:5000/wmirandamba-dev/fiap-mba-app@sha256:dc82591dd281dca65764ec6db2cd31b0f8c6c70870ff006bd597dc8053be47b7
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: fiap-mba-app
    deploymentconfig: fiap-mba-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fiap-mba-app
        deploymentconfig: fiap-mba-app
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: fiap-mba-app
          image: >-
            image-registry.openshift-image-registry.svc:5000/wmirandamba-dev/fiap-mba-app@sha256:dc82591dd281dca65764ec6db2cd31b0f8c6c70870ff006bd597dc8053be47b7
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
status:
  observedGeneration: 4
  details:
    message: config change
    causes:
      - type: ConfigChange
  availableReplicas: 1
  unavailableReplicas: 0
  latestVersion: 3
  updatedReplicas: 0
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2022-01-13T23:56:48Z'
      lastTransitionTime: '2022-01-13T23:56:48Z'
      message: Deployment config has minimum availability.
    - type: Progressing
      status: Unknown
      lastUpdateTime: '2022-01-13T23:59:42Z'
      lastTransitionTime: '2022-01-13T23:59:42Z'
      message: >-
        replication controller "fiap-mba-app-3" is waiting for pod
        "fiap-mba-app-3-deploy" to run
  replicas: 1
  readyReplicas: 1
