resources/application/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/wellermiranda/fiap-6aso-fase-4-grupo-6'
    deployment.kubernetes.io/revision: '3'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"fiap-6aso-grupo-6:latest","namespace":"wmirandamba-dev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"fiap-6aso-grupo-6\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  resourceVersion: '533641347'
  name: fiap-6aso-grupo-6
  uid: 1f081e23-7fb6-4c88-8dfc-74d0bbdebc4c
  creationTimestamp: '2022-01-12T21:56:58Z'
  generation: 3
  managedFields:
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2022-01-12T21:57:47Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"fiap-6aso-grupo-6"}':
                  'f:image': {}
    - manager: Mozilla
      operation: Update
      apiVersion: apps/v1
      time: '2022-01-12T22:03:04Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:alpha.image.policy.openshift.io/resolve-names': {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:image.openshift.io/triggers': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:replicas': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:labels':
                .: {}
                'f:app': {}
                'f:deploymentconfig': {}
            'f:spec':
              'f:containers':
                'k:{"name":"fiap-6aso-grupo-6"}':
                  .: {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":8080,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources':
                    .: {}
                    'f:limits':
                      .: {}
                      'f:cpu': {}
                      'f:memory': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2022-01-12T22:03:08Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
      subresource: status
  namespace: wmirandamba-dev
  labels:
    app: fiap-6aso-grupo-6
    app.kubernetes.io/component: fiap-6aso-grupo-6
    app.kubernetes.io/instance: fiap-6aso-grupo-6
    app.kubernetes.io/name: fiap-6aso-grupo-6
    app.kubernetes.io/part-of: fiap-mba-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 14-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fiap-6aso-grupo-6
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fiap-6aso-grupo-6
        deploymentconfig: fiap-6aso-grupo-6
    spec:
      containers:
        - name: fiap-6aso-grupo-6
          image: >-
            image-registry.openshift-image-registry.svc:5000/wmirandamba-dev/fiap-6aso-grupo-6@sha256:ed2a350c8dc2cdfaf9e83eb114360800199238ad74c9fcb7ef36eb2321628dfc
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  paused: false
status:
  observedGeneration: 3
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2022-01-12T21:57:51Z'
      lastTransitionTime: '2022-01-12T21:57:51Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2022-01-12T22:03:08Z'
      lastTransitionTime: '2022-01-12T21:56:58Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "fiap-6aso-grupo-6-5897488b88" has successfully progressed.
