resources/application/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: fiap-6aso-grupo-6
  namespace: wmirandamba-dev
  uid: 7a1be104-1d88-488b-9cf1-8343668d6a39
  resourceVersion: '533624755'
  creationTimestamp: '2022-01-12T21:56:58Z'
  labels:
    app: fiap-6aso-grupo-6
    app.kubernetes.io/component: fiap-6aso-grupo-6
    app.kubernetes.io/instance: fiap-6aso-grupo-6
    app.kubernetes.io/name: fiap-6aso-grupo-6
    app.kubernetes.io/part-of: fiap-mba-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 14-ubi8
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/wellermiranda/fiap-6aso-fase-4-grupo-6'
    openshift.io/generated-by: OpenShiftWebConsole
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2022-01-12T21:56:58Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":3000,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
spec:
  clusterIP: 172.30.202.246
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.202.246
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: fiap-6aso-grupo-6
    deploymentconfig: fiap-6aso-grupo-6
status:
  loadBalancer: {}
